--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -3,7 +3,7 @@
     "TEXT": [
       "ウィッチ", "敵に攻撃した時、一時的に #yスロー を与える。",
       "アーチャー", "このカードはトゲのような #y攻撃時 に発動する能力を #b無視 する。",
-      "プリンセス", "あなたのデッキに #yプリンセス カードを1枚加えた時、 #y最大 #yHP が #b1 増加する。",
+      "プリンセス", "あなたのデッキに #yプリンセス カードを1枚加えた時、 #y最大 #yHP が #b2 増加する。",
       "アンデッド", "このクラスは #y廃棄 された時 #b追加 効果が発動する。",
       "レアリティブラック", "このタイプのキャラクターは、 #yアップグレード の際に #y分岐 することがある。この特性は、レアカードだけが持つ。",
       "東の国", "このカードは #y東の国 を指名する効果の対象となる。",
@@ -49,16 +49,16 @@
 
   "DengunsCommandAction": {
     "TEXT": [
-      "手札のカード1枚を山札の1番上に置く",
-      "手札のカードを山札の1番上に置く",
+      "山札の1番上に置く手札のカード1枚を選択する",
+      "山札の1番上に置く手札のカードを選択する",
       "山札に東の国カードがない…"
     ]
   },
 
   "LepuruAction": {
     "TEXT": [
-      "山札に戻る",
-      "山札に戻る"
+      "山札に戻すカードを選択する",
+      "山札に戻すカードを選択する"
     ]
   },
 
@@ -82,8 +82,8 @@
 
   "TowaAction": {
     "TEXT": [
-      "山札の1番上に置くウィッチを1枚選択",
-      "山札の1番上に置くウィッチを2枚選択",
+      "山札の1番上に置くウィッチを1枚選択する",
+      "山札の1番上に置くウィッチを2枚選択する",
       "山札にウィッチカードがない…"
     ]
   },
@@ -96,7 +96,7 @@
 
   "YashimaAction": {
     "TEXT": [
-      "1枚のカードの効果をコピーする"
+      "効果をコピーするカードを選択する"
     ]
   },
 
@@ -110,7 +110,7 @@
 
   "RisleyAction": {
     "TEXT": [
-      "コストを1減少する"
+      "コストを減少させるカードを選択する"
     ]
   },
 
@@ -124,6 +124,12 @@
   "KagerouAction": {
     "TEXT": [
       "捨てる"
+    ]
+  },
+
+  "SanmotoAction": {
+    "TEXT": [
+      "東の国カードをプレイする。"
     ]
   },
 
@@ -156,8 +162,8 @@
 
   "BlitzkriegAction": {
     "TEXT": [
-      "プレイするカードを選ぶ（任意）",
-      "手札からプレイするカードを1枚選ぶ（任意）",
+      "プレイする帝国カードを選ぶ（任意）",
+      "プレイする帝国カードを1枚選ぶ（任意）",
       "選択"
     ]
   },
@@ -170,7 +176,7 @@
 
   "MephistoAction": {
     "TEXT": [
-      "廃棄する帝国とデーモンカードを選ぶ（任意）",
+      "廃棄する帝国またはデーモンカードを選ぶ（任意）",
       "山札に帝国とデーモンカードがない…"
     ]
   },
@@ -333,6 +339,18 @@
       "手札に加えるカードを1枚選ぶ",
       "手札に加えるカードを選ぶ",
       "山札に封印解除カードがない…"
+    ]
+  },
+
+  "ShinatoAction": {
+    "TEXT": [
+      "山札に戻するカードを1枚選ぶ"
+    ]
+  },
+
+  "ShukaAction": {
+    "TEXT": [
+      "東の国カードを ", " 枚まで選ぶ"
     ]
   }
 }
