--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -78,9 +78,43 @@
       "你应该更警觉的。"
     ],
     "OPTIONS": [
-      "[星星?] #g最大生命+8。 ",
-      "[团长?] #g获得一个遗物。 ",
+      "[星星?] #g最大生命 #b+8。 ",
+      "[指挥官?] #g获得一个遗物。 ",
       "[醒来] 离开。 "
+    ]
+  },
+
+  "aigisMod:VampireDeal": {
+    "NAME": "与吸血鬼的交易",
+    "DESCRIPTIONS": [
+      "你遇到了一个强大的不死族 NL 她想加入你的队伍，但是你不相信她的话。",
+      "你接受了交易。",
+      "你理解了她的目的。",
+      "你拒绝了她并继续踏上旅程。"
+    ],
+    "OPTIONS": [
+      "[招募] #g获得一张罕见英杰卡牌 。 #r获得一个致命的诅咒 。",
+      "[战斗] #g获得一张稀有英杰卡牌并升级它 。",
+      "[拒绝]",
+      "[离开]",
+      "[招募] #g获得一张稀有英杰卡牌 。"
+    ]
+  },
+  "aigisMod:FallenReunion": {
+    "NAME": "坠落的重聚",
+    "DESCRIPTIONS": [
+      "有人拦住了你。 NL 它可能是一个天使，你却感到了有些许邪恶。 NL 你要慎重考虑你的选择。",
+      "你们似乎有共同的目标",
+      "她说你通过了她的试炼",
+      "你准备逃跑"
+    ],
+    "OPTIONS": [
+      "[沟通] #g获得一张罕见英杰卡牌 。",
+      "[战斗] #g获得一张稀有英杰卡牌并升级它 。",
+      "[逃跑] #r失去5点生命.",
+      "[招募] #g获得一张稀有英杰卡牌 。",
+      "[锁定] 你没有解放牌。",
+      "[离开]"
     ]
   }
 }
