--- a/localization/zhs/AigisMod-Monster-Strings.json
+++ b/localization/zhs/AigisMod-Monster-Strings.json
@@ -131,5 +131,41 @@
     "DIALOG": [
       ""
     ]
+  },
+  "aigisMod:Riven": {
+    "NAME": "瑞文",
+    "MOVES": [
+      "第一夜·起始之歌",
+      "第二夜·款待之宴",
+      "第三夜·常夜女王",
+      "第四夜·迎来黎明",
+      "第五夜·无终惨剧",
+      ""
+    ],
+    "DIALOG": [
+      ""
+    ]
+  },
+  "aigisMod:RivenPhantom": {
+    "NAME": "变幻自在的幻影",
+    "MOVES": [
+      "",
+      ""
+    ],
+    "DIALOG": [
+      ""
+    ]
+  },
+  "aigisMod:Lukifer": {
+    "NAME": "路琪法",
+    "MOVES": [
+      "疾驰的流星",
+      "宵暗的明星",
+      "明星降临",
+      "黎明之翼"
+    ],
+    "DIALOG": [
+      ""
+    ]
   }
 }
