--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -3,7 +3,7 @@
     "TEXT": [
       "魔女", "当敌人受到该牌攻击，获得临时 #y缓慢 .",
       "弓箭手", "此卡 #b无视 敌人的各种受到 #y攻击 是发动能力，比如荆棘。",
-      "公主", "当你将 #y公主 牌加入卡组时，获得 #b1 点 #y最大生命 。",
+      "公主", "当你将 #y公主 牌加入卡组时，获得 #b2 点 #y最大生命 。",
       "不死", "此类型卡牌被 #y消耗 时，获得 #b额外 效果 。",
       "黑色稀有度", "此类型卡牌在 #y升级 时会有 #y分支 路线。只有稀有牌会有此特性。",
       "东国", " 此卡可以响应其他 #y东国 牌的效果",
@@ -124,6 +124,12 @@
   "KagerouAction": {
     "TEXT": [
       "弃牌。"
+    ]
+  },
+
+  "SanmotoAction": {
+    "TEXT": [
+      "打出。"
     ]
   },
 
@@ -333,6 +339,17 @@
       "选择一张牌加入到你的手牌中。",
       "选择牌加入到你的手牌中",
       "我的抽牌堆中没有解放牌..."
+    ]
+  },
+
+  "ShinatoAction": {
+    "TEXT": [
+      "选择一张牌洗回抽牌堆"
+    ]
+  },
+  "ShukaAction": {
+    "TEXT": [
+      "你可以选择至多 ", " 张东国牌。"
     ]
   }
 }
