--- a/localization/jpn/AigisMod-Event-Strings.json
+++ b/localization/jpn/AigisMod-Event-Strings.json
@@ -8,7 +8,7 @@
       "あなたは彼らの期待に答えた。"
     ],
     "OPTIONS": [
-      "[力を借りる] #gアンコモン英傑カードを1枚得る",
+      "[力を借りる] #gアンコモン英傑カードを1枚選んで獲得する。",
       "[戦う] #r英傑と戦う。 #gアンコモン英傑カードをレアにアップグレードする",
       "[立ち去る]",
       "アップグレードする英傑カードを1枚選ぶ。",
@@ -80,6 +80,41 @@
       "[星?] #g最大HP+8",
       "[団長?] #gレリックを手に入れる",
       "[起きる] 立ち去る"
+    ]
+  },
+
+
+  "aigisMod:VampireDeal": {
+    "NAME": "始祖との取引",
+    "DESCRIPTIONS": [
+      "あなたは強力なアンデッドと遭遇した。 NL 彼女はあなたの目的への協力を提案してきたが、その言葉を信用できない。",
+      "その取引を受け入れた。",
+      "あなたは彼女の目的を理解した。",
+      "提案を拒否し、旅を再開した。"
+    ],
+    "OPTIONS": [
+      "[受け入れる] #gアンコモン英傑カードを1枚手に入れる。 #r致命的な呪いを手に入れる。",
+      "[戦う] #r英傑と戦う。 #gアップグレードされたレア英傑カードを1枚手に入れる。",
+      "[拒否]",
+      "[離れる]",
+      "[参入] #gレア英傑カードを手に入れる。"
+    ]
+  },
+  "aigisMod:FallenReunion": {
+    "NAME": "闇堕ち同盟",
+    "DESCRIPTIONS": [
+      "何者かの襲撃だ！ NL 相手は天使のようだが、どこか悪魔のようにも思える。 NL さてどうしようか。",
+      "共通の目的があるようだ。",
+      "彼女はあなたが試練に合格したことを告げた。",
+      "あなたは逃げることができた"
+    ],
+    "OPTIONS": [
+      "[話す] #gアンコモン英傑カードを1枚手に入れる。",
+      "[戦う] #r相手と戦う。 #gアップグレードされたレア英傑カードを1枚手に入れる。",
+      "[逃げる] #rHP5を失う。",
+      "[受け入れる] #gレア英傑カードを1枚手に入れる。",
+      "[LOCKED] 封印解除カードを持っていない。",
+      "[離れる]"
     ]
   }
 }
