--- a/localization/zhs/AigisMod-Card-Strings.json
+++ b/localization/zhs/AigisMod-Card-Strings.json
@@ -199,6 +199,58 @@
       "讴歌生命者"
     ]
   },
+  "aigisMod:SanmotoPlatinum": {
+    "NAME": "山本五郎左卫门",
+    "DESCRIPTION": "打出手牌中的1张东国牌 !M! 次。 NL  消耗 。",
+    "EXTENDED_DESCRIPTION" : [
+      ""
+    ]
+  },
+  "aigisMod:SanmotoBlack": {
+    "NAME": "山本五郎左卫门",
+    "DESCRIPTION": " 保留 。 NL 打出手牌中的1张东国牌 !M! 次。 NL 消耗性 ： !stslib:ex!",
+    "EXTENDED_DESCRIPTION" : [
+      ""
+    ]
+  },
+  "aigisMod:LukiferPlatinum": {
+    "NAME": "路琪法",
+    "DESCRIPTION": "你本回合每打出一张牌获得 !M! 层 aigismod:伤害光环 和 5 点 格挡。 NL 消耗 。 NL aigismod:解放 ： 将一张此牌的复制品加入弃牌堆。",
+    "EXTENDED_DESCRIPTION" : [
+      "指引黎明者"
+    ]
+  },
+  "aigisMod:LukiferBlack": {
+    "NAME": "路琪法",
+    "DESCRIPTION": "你本回合每打出一张牌获得 !M! 层 aigismod:伤害光环 和 5 点 格挡。 NL 消耗 。 NL aigismod:解放 ： 将一张此牌的复制品加入抽牌堆。",
+    "EXTENDED_DESCRIPTION" : [
+      "指引黎明者"
+    ]
+  },
+  "aigisMod:RivenPlatinum": {
+    "NAME": "瑞文",
+    "DESCRIPTION": "造成 !D! 点 aigismod:吸血鬼 伤害。 NL aigismod:诅咒 ： 获得 1 点 力量 和 敏捷 。 NL aigismod:不死 ： 将一张变幻自在的幻影加入抽牌堆。",
+    "EXTENDED_DESCRIPTION" : [
+      "永夜始祖者"
+    ]
+  },
+  "aigisMod:RivenBlack": {
+    "NAME": "瑞文",
+    "DESCRIPTION": "对所有敌人造成 !D! 点 aigismod:吸血鬼 伤害。 NL aigismod:诅咒 ： 获得 1 点 力量 和 敏捷 。 NL aigismod:不死 ： 将一张变幻自在的幻影加入抽牌堆。",
+    "EXTENDED_DESCRIPTION" : [
+      "永夜始祖者"
+    ]
+  },
+  "aigisMod:RivenPhantom": {
+    "NAME": "变幻自在的幻影",
+    "DESCRIPTION": "对所有敌人造成 !D! 点 aigismod:吸血鬼 伤害。"
+  },
+  "aigisMod:RepeatingNightmare": {
+    "NAME": "永不终焉的噩梦",
+    "DESCRIPTION": "你的回合结束时，你的生命变为 0 。"
+  },
+
+
 
 
 
@@ -306,8 +358,8 @@
   },
   "aigisMod:Iris": {
     "NAME": "伊丽丝",
-    "DESCRIPTION": "回复 !M! 点生命。 NL 永久减少此牌回复量1点。 NL 获得 !aigisMod:SecondMagic! 临时生命。",
-    "UPGRADE_DESCRIPTION": "回复 !M! 点生命。 NL 永久减少此牌回复量1点。 NL 获得 !aigisMod:SecondMagic! 临时生命。",
+    "DESCRIPTION": "回复 !M! 点生命。 NL 永久减少此牌回复量1点。 NL 获得 !aigisMod:SecondMagic! 点临时生命。",
+    "UPGRADE_DESCRIPTION": "回复 !M! 点生命。 NL 永久减少此牌回复量1点。 NL 获得 !aigisMod:SecondMagic! 点临时生命。",
     "EXTENDED_DESCRIPTION" : [
       "治癒士"
     ]
@@ -476,7 +528,7 @@
   "aigisMod:Soma": {
     "NAME": "索玛",
     "DESCRIPTION": "造成 !D! 点 aigismod:弓箭手 伤害。 aigismod:搭档 : 爱丽莎 。",
-    "UPGRADE_DESCRIPTION": "造成 !D! 点 aigismod:弓箭手 伤害。 aigismod:搭档 : 爱丽莎 。",
+    "UPGRADE_DESCRIPTION": "造成 !D! 点 aigismod:弓箭手 伤害。 aigismod:搭档 : 爱丽莎 并且本回合此牌耗能变为1。",
     "EXTENDED_DESCRIPTION" : [
       "弓箭手"
     ]
@@ -949,15 +1001,16 @@
   "aigisMod:Setsuna": {
     "NAME": "刹那",
     "DESCRIPTION": "获得 !aigisMod:SecondMagic! 层 aigismod:伤害光环 。 NL 获得 aigismod:忍术 。 NL 手里剑 获得 !M! 点额外伤害。",
-    "UPGRADE_DESCRIPTION": "将1张刹那-克隆 洗入抽牌堆。 获得 !aigisMod:SecondMagic! 层 aigismod:伤害光环 。 NL 获得 aigismod:忍术 : 手里剑 获得 !M! 点额外伤害。",
+    "UPGRADE_DESCRIPTION": "将1张 刹那（分身） 洗入抽牌堆。 获得 !aigisMod:SecondMagic! 层 aigismod:伤害光环 。 NL 获得 aigismod:忍术 : 手里剑 获得 !M! 点额外伤害。",
     "EXTENDED_DESCRIPTION" : [
-      "鬼刃忍"
+      "鬼刃忍",
+      "将1张 刹那（分身） 洗入抽牌堆。 获得 !aigisMod:SecondMagic! 层 aigismod:伤害光环 。 NL 获得 aigismod:忍术 : 手里剑 获得 !M! 点额外伤害。"
     ]
   },
   "aigisMod:SetsunaClone": {
     "NAME": "刹那（分身）",
-    "DESCRIPTION": "抽到时: 对所有敌人造成 !D! 点伤害,等同于消耗的手里剑数量并抽1张牌。 无法打出 。",
-    "UPGRADE_DESCRIPTION": "抽到时: 对所有敌人造成 !D! 点伤害,等同于消耗的手里剑数量并抽1张牌。 获得1层 无实体 。 消耗 。"
+    "DESCRIPTION": "根据消耗手里剑的数量对所有敌人造成 !D! 点伤害。 NL 抽 !M! 张牌。",
+    "UPGRADE_DESCRIPTION": "根据消耗手里剑的数量对所有敌人造成 !D! 点伤害。 NL 抽 !M! 张牌。"
   },
   "aigisMod:Ramii": {
     "NAME": "拉米",
@@ -991,10 +1044,10 @@
   },
   "aigisMod:Adele": {
     "NAME": "爱黛尔",
-    "DESCRIPTION": "抽到时:获得 !M! 点临时生命。 NL 造成 !D! 点伤害。 NL 施加 aigismod:减速 。",
-    "UPGRADE_DESCRIPTION": "抽到时: 获得 !M! 点临时生命。 NL 造成 !D! 点伤害。 NL 施加 aigismod:减速 。",
+    "DESCRIPTION": "回复 !M! 点生命。 NL 造成 !D! 点伤害。 NL 施加 2 层 aigismod:减速 。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "回复 !M! 点生命。 NL 造成 !D! 点伤害。 NL 施加 2 层 aigismod:减速 。 NL 消耗 。",
     "EXTENDED_DESCRIPTION" : [
-      "魔女 "
+      "魔女"
     ]
   },
   "aigisMod:Renarde": {
@@ -1256,14 +1309,6 @@
     "DESCRIPTION": "本回合手牌耗能变为0。",
     "UPGRADE_DESCRIPTION": "保留 。 NL 本回合手牌耗能变为0。"
   },
-  "aigisMod:Kokoro": {
-    "NAME": "可可萝",
-    "DESCRIPTION": "抽 2 张牌。 对所有敌人施加 aigismod:减速 。 NL aigismod:冷却 !M! :对所有敌人造成 !D! 点伤害。",
-    "UPGRADE_DESCRIPTION": "抽 2 张牌。 对所有敌人施加 aigismod:减速 。 NL aigismod:冷却 !M! :对所有敌人造成 !D! 点伤害。",
-    "EXTENDED_DESCRIPTION" : [
-      "时魔女 "
-    ]
-  },
   "aigisMod:Early": {
     "NAME": "厄利",
     "DESCRIPTION": "抽 2 张牌。 对所有敌人施加 aigismod:减速 。 NL aigismod:技能充能 : 本场战斗提升 此牌的 减速 !aigisMod:SecondMagic! 点。",
@@ -1272,14 +1317,7 @@
       "时魔女 "
     ]
   },
-  "aigisMod:Lizette": {
-    "NAME": "莉洁特",
-    "DESCRIPTION": "对所有敌人施加 aigismod:减速 。",
-    "UPGRADE_DESCRIPTION": "对所有敌人施加 aigismod:减速 。 NL 抽1张牌。",
-    "EXTENDED_DESCRIPTION" : [
-      "时魔女 "
-    ]
-  },
+
 
 
 
@@ -1717,7 +1755,7 @@
   "aigisMod:AirSignal": {
     "NAME": "空中标记 ",
     "DESCRIPTION": "保留 。 NL 将1张空域牌从弃牌堆返回手牌，本回合耗能变为0。 NL 消耗 。",
-    "UPGRADE_DESCRIPTION": "保留 。 NL 将1张空域牌从弃牌堆返回手牌，本回合耗能变为0。 NL 对一名随机敌人施加 1 层 虚弱 。  NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "保留 。 NL 将1张空域牌从弃牌堆返回手牌，本回合耗能变为0。 NL 对一名随机敌人施加 1 层 虚弱 。 NL 消耗 。",
     "EXTENDED_DESCRIPTION" : [
       ""
     ]
@@ -2397,8 +2435,8 @@
   },
   "aigisMod:Anabella": {
     "NAME": "安娜贝拉",
-    "DESCRIPTION": "魔像部件 获得 !M! 点额外格挡 。 NL 当生成魔像部件 时, 对所有敌人施加 !aigisMod:SecondMagic! 层 虚弱 和 易伤 。",
-    "UPGRADE_DESCRIPTION": "魔像部件 获得 !M! 点额外格挡 。 NL 当生成魔像部件 时, 对所有敌人施加 !aigisMod:SecondMagic! 层 虚弱 和 易伤 。",
+    "DESCRIPTION": "魔像部件 获得 !M! 点额外格挡 。 NL 下 !aigisMod:SecondMagic! 个回合开始时,将 1 张 魔像部件 加入手牌。",
+    "UPGRADE_DESCRIPTION": "魔像部件 获得 !M! 点额外格挡 。 NL 下 !aigisMod:SecondMagic! 个回合开始时,将 1 张 魔像部件 加入手牌。",
     "EXTENDED_DESCRIPTION" : [
       "知识的求道者"
     ]
@@ -2634,8 +2672,8 @@
 
   "aigisMod:Merone": {
     "NAME": "梅洛妮",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 施加  aigismod:减速 。 NL 随机减少手牌中普通攻击牌耗能1点。",
-    "UPGRADE_DESCRIPTION": "造成 !D! 点伤害。 NL 施加  aigismod:减速 。 NL 随机减少手牌中普通攻击牌耗能1点。",
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 施加  aigismod:减速 。 NL 随机减少手牌中的一张普通牌耗能1点。",
+    "UPGRADE_DESCRIPTION": "造成 !D! 点伤害。 NL 施加  aigismod:减速 。 NL 随机减少手牌中的一张普通牌耗能1点。",
     "EXTENDED_DESCRIPTION" : [
       "魔女"
     ]
@@ -3146,7 +3184,7 @@
     "DESCRIPTION": "下一张攻击牌 造成 !M! 点额外伤害。 NL 将一张 灼伤洗入抽牌堆。",
     "UPGRADE_DESCRIPTION": "下一张攻击牌 造成 !M! 点额外伤害。 NL 将一张 灼伤洗入抽牌堆。",
     "EXTENDED_DESCRIPTION" : [
-      "虔诚的枪士"
+      "信仰的枪士"
     ]
   },
   "aigisMod:Marsi": {
@@ -4071,18 +4109,24 @@
       "盗贼"
     ]
   },
+
+
+
+
+
+
   "aigisMod:Hina": {
     "NAME": "雏",
-    "DESCRIPTION": "将 2 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 3 点 格挡 。",
-    "UPGRADE_DESCRIPTION": "将 2 张 手里剑+ 加入手牌。 NL 本回合每打出一张 手里剑 获得 3 点 格挡 。",
+    "DESCRIPTION": "将 2 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 !M! 点 格挡 。",
+    "UPGRADE_DESCRIPTION": "将 2 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 !M! 点 格挡 。",
     "EXTENDED_DESCRIPTION": [
       "忍者"
     ]
   },
   "aigisMod:Kaname": {
     "NAME": "要",
-    "DESCRIPTION": "将 1 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 1 点 力量  。 NL 消耗 。",
-    "UPGRADE_DESCRIPTION": " 保留 。 NL 将 1 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 1 点 力量  。 NL 消耗 。",
+    "DESCRIPTION": "将 1 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 1 点 力量 。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": " 保留 。 NL 将 1 张 手里剑 加入手牌。 NL 本回合每打出一张 手里剑 获得 1 点 力量 。 NL 消耗 。",
     "EXTENDED_DESCRIPTION": [
       "封妖的忍者"
     ]
@@ -4099,28 +4143,144 @@
   "aigisMod:Tachibana": {
     "NAME": "立花",
     "DESCRIPTION": "本回合每打出一张角色牌便将 1 张 手里剑 加入手牌。",
-    "UPGRADE_DESCRIPTION": "本回合每打出一张角色牌便将 1 张 手里剑+ 加入手牌。",
+    "UPGRADE_DESCRIPTION": "本回合每打出一张角色牌便将 1 张 手里剑 加入手牌。",
     "EXTENDED_DESCRIPTION": [
       "鬼刃忍",
-      "本回合每打出一张角色牌便将 1 张 手里剑 加入手牌。 NL 打出手牌中所有耗能为 4 的牌。"
+      "本回合每打出一张角色牌便将 1 张 手里剑 加入手牌。 NL 手牌中耗能为4的牌本回合耗能变为0"
     ]
   },
   "aigisMod:Momiji": {
     "NAME": "红叶",
-    "DESCRIPTION": "获得 2 点 力量 。 NL 将 1 张随机耗能为 4 的角色牌加入手牌。 NL 消耗 。",
-    "UPGRADE_DESCRIPTION": "获得 3 点 力量 。 NL 将 1 张随机耗能为 4 的角色牌加入手牌。 NL 消耗 。",
+    "DESCRIPTION": "获得 !M! 点 力量 。 NL 将 1 张随机耗能为 4 的角色牌加入手牌。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "获得 !M! 点 力量 。 NL 将 1 张随机耗能为 4 的角色牌加入手牌。 NL 消耗 。",
     "EXTENDED_DESCRIPTION": [
       "剑豪"
     ]
   },
-  "aigisMod:Kazakiri": {
-    "NAME": "风切",
-    "DESCRIPTION": "你打出的下一张东国攻击牌，打出 2 次。",
-    "UPGRADE_DESCRIPTION": "你打出的下一张东国攻击牌，打出 2 次。",
+  "aigisMod:Akura": {
+    "NAME": "阿库拉",
+    "DESCRIPTION": "获得 !B! 点 格挡 。 NL 获得 8 点临时生命。 NL 如果敌人的意图为攻击，获得 !M! 点 力量 。",
+    "UPGRADE_DESCRIPTION": "获得 !B! 点 格挡 。 NL 获得 8 点临时生命。 NL 如果敌人的意图为攻击，获得 !M! 点 力量 。",
     "EXTENDED_DESCRIPTION": [
-      "斩刀付丧神"
+      "紫炎的鬼佣兵"
+    ]
+  },
+  "aigisMod:Kasumi": {
+    "NAME": "霞",
+    "DESCRIPTION": "将最多 2 张牌从弃牌堆返回抽牌堆。 NL 造成 !D! 点伤害。 NL aigismod:搭档 ： 狭雾/志乃。",
+    "UPGRADE_DESCRIPTION": "将最多 2 张牌从弃牌堆返回抽牌堆。 NL 造成 !D! 点伤害。 NL aigismod:搭档 ： 狭雾/志乃。 他们的耗能本回合变为 0 。",
+    "EXTENDED_DESCRIPTION": [
+      "滑头鬼的女儿"
+    ]
+  },
+  "aigisMod:Shino": {
+    "NAME": "志乃",
+    "DESCRIPTION": "本回合每打出一张 手里剑 或 东国牌 所有敌人失去 !M! 点生命。 NL aigismod:搭档 ： 狭雾/霞。",
+    "UPGRADE_DESCRIPTION": "本回合每打出一张 手里剑 或 东国牌 所有敌人失去 !M! 点生命 NL aigismod:搭档 ： 狭雾/霞。",
+    "EXTENDED_DESCRIPTION": [
+      "滑头鬼的女儿",
+      "本回合每打出一张 手里剑 或 东国牌 所有敌人失去 !M! 点生命 NL aigismod:搭档 ： 狭雾/霞。 他们的耗能本回合变为 0 。"
+    ]
+  },
+  "aigisMod:Sagiri": {
+    "NAME": "狭雾",
+    "DESCRIPTION": "造成 !D! 点伤害两次 。 NL aigismod:搭档 ： 霞/志乃。",
+    "UPGRADE_DESCRIPTION": "造成 !D! 点伤害两次  NL aigismod:搭档 ： 霞/志乃。 他们的耗能本回合变为 0  。",
+    "EXTENDED_DESCRIPTION": [
+      "滑头鬼的女儿"
+    ]
+  },
+  "aigisMod:Nagi": {
+    "NAME": "凪",
+    "DESCRIPTION": "施加 !M! 层 易伤 。 当你使用手里剑攻击敌人时，获得 1 点 力量 。 NL 将 1 张 手里剑 加入手牌。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "施加 !M! 层 易伤 。 当你使用手里剑攻击敌人时，获得 1 点 力量 。 NL 将 1 张 手里剑 加入手牌。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION" : [
+      "封妖的忍者",
+      "施加 !M! 层 易伤 。 当你使用手里剑攻击敌人时，获得 1 点 力量 。 NL 将 1 张 手里剑 加入手牌。 NL 消耗性 ： !stslib:ex!"
+    ]
+  },
+  "aigisMod:Enju": {
+    "NAME": "槐",
+    "DESCRIPTION": "获得 !M! 层 再生 。 本场战斗后获得 20 金币。 回合开始时获得的金币减少 !aigisMod:SecondMagic! 。",
+    "UPGRADE_DESCRIPTION": "获得 !M! 层 再生 。 本场战斗后获得 20 金币。 回合开始时获得的金币减少 !aigisMod:SecondMagic! 。",
+    "EXTENDED_DESCRIPTION" : [
+      "座敷童子",
+      "获得 !M! 层 再生 。本场战斗后获得 20 金币。 回合结束时获得的金币减少 !aigisMod:SecondMagic! 。"
+    ]
+  },
+  "aigisMod:Shinato": {
+    "NAME": "志那度",
+    "DESCRIPTION": "获得 !B! 点格挡。 NL 将 1 张牌从弃牌堆洗入抽牌堆，直到打出为止其耗能变为 0 。",
+    "UPGRADE_DESCRIPTION": "获得 !B! 点格挡。 NL 将 1 张牌从弃牌堆洗入抽牌堆，直到打出为止其耗能变为 0 。",
+    "EXTENDED_DESCRIPTION": [
+      "疾风的军师"
+    ]
+  },
+  "aigisMod:Shuka": {
+    "NAME": "珠桦",
+    "DESCRIPTION": "失去 !M! 点 力量 。 NL 获得 5 金币 NL 回合开始时，将 1 张牌从弃牌堆送入抽牌堆底部并获得 [E]",
+    "UPGRADE_DESCRIPTION": "失去 !M! 点 力量 。 NL 获得 5 金币 NL 回合开始时，将 1 张牌从弃牌堆送入抽牌堆底部并获得 [E]",
+    "EXTENDED_DESCRIPTION": [
+      "分福茶釜付丧神"
+    ]
+  },
+  "aigisMod:Yoyuki": {
+    "NAME": "夜雪",
+    "DESCRIPTION": "你下一次打出原始耗能为 4 的牌时, 回复所有能量。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "你下一次打出原始耗能为 4 的牌时， 回复所有能量。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION": [
+      "夜游妖怪们的现当家"
+    ]
+  },
+  "aigisMod:Iris2": {
+    "NAME": "伊丽丝",
+    "DESCRIPTION": "获得 3 层 再生 。 NL aigismod:搭档 ：卡米拉。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "获得 3 层 再生 。 NL aigismod:搭档 ：卡米拉 并且本回合其耗能变为 0 。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION": [
+      "治癒士"
+    ]
+  },
+  "aigisMod:Camilla": {
+    "NAME": "卡米拉",
+    "DESCRIPTION": "回复 4 点生命。 NL 在回合结束时回复 5 点生命。 NL aigismod:搭档 ： 伊丽丝。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "回复 4 点生命。 NL 在回合结束时回复 5 点生命。 NL aigismod:搭档 ： 伊丽丝 并且本回合其耗能变为 0 。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION": [
+      "治癒士"
+    ]
+  },
+  "aigisMod:Shirogane": {
+    "NAME": "白银",
+    "DESCRIPTION": "获得 2 点临时生命。 NL 将 !M! 张 手里剑 加入手牌。",
+    "UPGRADE_DESCRIPTION": "获得 2 点临时生命。 NL 将 !M! 张 手里剑 加入手牌。",
+    "EXTENDED_DESCRIPTION": [
+      "鬼刃忍"
+    ]
+  },
+  "aigisMod:Julia2": {
+    "NAME": "朱莉娅",
+    "DESCRIPTION": "本场战斗随机获得 1 个遗物。 NL 获得 !M! 金币 。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "本场战斗随机获得 1 个遗物。 NL 获得 !M! 金币 。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION" : [
+      ""
+    ]
+  },
+  "aigisMod:Lizette": {
+    "NAME": "莉洁特",
+    "DESCRIPTION": "对所有敌人施加 !M! aigismod:减速 。 NL 下回合抽 1 张牌。",
+    "UPGRADE_DESCRIPTION": "对所有敌人施加 !M! aigismod:减速 。 NL 下回合抽 1 张牌。",
+    "EXTENDED_DESCRIPTION" : [
+      "时魔女 "
+    ]
+  },
+  "aigisMod:Kokoro": {
+    "NAME": "可可萝",
+    "DESCRIPTION": "抽 2 张牌。 对所有敌人施加 !aigisMod:SecondMagic!  层 aigismod:减速 。 NL aigismod:冷却 !M! :随机击晕 1 名敌人。",
+    "UPGRADE_DESCRIPTION": "抽 2 张牌。 对所有敌人施加 !aigisMod:SecondMagic!  层 aigismod:减速 。 NL aigismod:冷却 !M! :随机击晕 1 名敌人。",
+    "EXTENDED_DESCRIPTION" : [
+      "时魔女 "
     ]
   }
+
 
 
 
