--- a/localization/zhs/AigisMod-Power-Strings.json
+++ b/localization/zhs/AigisMod-Power-Strings.json
@@ -217,7 +217,7 @@
         },
         "aigisMod:GolemTactics": {
                 "NAME": "魔像战术",
-                "DESCRIPTIONS": ["当你创造魔像部件时，所有敌人获得 #b", " 层 #y虚弱 和 #y易伤 。"]
+                "DESCRIPTIONS": ["下 #b"," 個回合开始时,将 #b1 张魔像部件加入手牌。","下回合开始时,将 #b1 张魔像部件加入手牌。"]
         },
         "aigisMod:SealTalisman": {
                 "NAME": "退魔守护灵符",
@@ -388,6 +388,53 @@
         "aigisMod:CommanderInspiration": {
                 "NAME": "教导队长的鼓舞",
                 "DESCRIPTIONS": ["每回合一次,打出 #y打击/防御 牌时, 获得 #b", " [E] 。", "此效果本回合已发动。"]
+        },
+
+
+
+        "aigisMod:MorningStar": {
+                "NAME": "明星",
+                "DESCRIPTIONS": ["本回合当你打出一张牌时，获得 #b", " 层 #y伤害光环 和 #b", " 点 #y格挡 。"]
+        },
+        "aigisMod:RivenEnemyPower": {
+                "NAME": "始祖之血",
+                "DESCRIPTIONS": ["当 #y变幻自在的幻影 存活时不会受到伤害。当攻击时，最大HP减少 #b"]
+        },
+        "aigisMod:LukiferEnemyPower": {
+                "NAME": "黎明之翼",
+                "DESCRIPTIONS": ["下 #b", " 次，该敌人死亡时，下个行动变为复活。每次复活时，获得 #b1 点 #y力量 。"]
+        },
+        "aigisMod:NinpouBodySplit": {
+                "NAME": "忍术：雏分身之术",
+                "DESCRIPTIONS": ["本回合每当你打出一张 #y手里剑 ，获得 #b", " 点 #y格挡 。"]
+        },
+        "aigisMod:SalveOfStrength": {
+                "NAME": "怪力的软膏",
+                "DESCRIPTIONS": ["本回合每当你打出一张 #y手里剑 ，获得 #b", " 点 #y力量 。"]
+        },
+        "aigisMod:KibaninFrenzy": {
+                "NAME": "鬼刃大车轮",
+                "DESCRIPTIONS": ["本回合每当你打出一张 #y角色 牌， 将 #b", " 张 #y手里剑 牌加入手牌。"]
+        },
+        "aigisMod:SecretPill": {
+                "NAME": "秘传的丸药",
+                "DESCRIPTIONS": ["当该敌人被 #y手里剑 牌攻击时 ，获得 #b", " 点 #y力量 。"]
+        },
+        "aigisMod:GoodLuckPrank": {
+                "NAME": "招福的恶作剧",
+                "DESCRIPTIONS": ["胜利时，获得 #b", " #y金币。 回合开始时，获得 #y金币 减少 #r", "。"]
+        },
+        "aigisMod:UmbrellaAttraction": {
+                "NAME": "招揽客人的狸猫转伞",
+                "DESCRIPTIONS": ["回合开始时，你可以选择至多 #b", " 张在弃牌堆的 #y东国 牌 将其放到抽牌堆底部，并获得 [E] 如果你至少放了一张牌。"]
+        },
+        "aigisMod:HighMoon": {
+                "NAME": "明月高悬的夜行妖怪",
+                "DESCRIPTIONS": ["你打出的下 #b", " 张消耗为 4 的牌，回复所有的能量。"]
+        },
+        "aigisMod:NightParade": {
+                "NAME": "千鬼夜行",
+                "DESCRIPTIONS": ["本回合每次你打出 #y东国 或 #y手里剑 牌时，所有敌人失去 #b", " 点 #y生命 。"]
         },
 
         "aigisMod:Strength ForTheTurnPower": {
